@startuml
!theme plain
title 4. Scheduling System

' Stub for Users table (fully defined in "Core User & Role Management")
class Users <<(U,#ADD1B2)>> {
  + id: INT {PK}
  role: ENUM
}

class AppointmentSlots {
  + id: INT {PK}
  teacher_id: INT {FK}
  --
  date: DATE
  time: TIME
  type: ENUM('online', 'in-person')
  created_at: TIMESTAMP
}

class BookedSlots {
  + id: INT {PK}
  slot_id: INT {FK}
  parent_id: INT {FK}
  student_id: INT {FK}
  --
  booked_at: TIMESTAMP
}

class calendar_events {
  + id: INT {PK}
  --
  title: VARCHAR(255)
  start_date: DATE
}

' Relationships for scheduling
Users "1" -- "M" AppointmentSlots : teacher_id (via Users.id with role 'teacher')
AppointmentSlots "1" -- "M" BookedSlots : slot_id
Users "1" -- "M" BookedSlots : parent_id (via Users.id with role 'parent')
Users "1" -- "M" BookedSlots : student_id (via Users.id with role 'student')

' Note that calendar_events doesn't have direct FKs to Users in your schema
note "calendar_events is a standalone event table in your schema." as N_cal
N_cal .. calendar_events

note "Users table represents the central user identity, detailed in '1. Core User & Role Management'." as N1
N1 .. Users

@enduml